this is the commit :(

--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -51,6 +51,7 @@
     <ClInclude Include="components\enemy_detection_component.h" />
     <ClInclude Include="classes\weapon_behaviour.h" />
     <ClInclude Include="components\hunger_component.h" />
+    <ClInclude Include="components\hypothermia_component.h" />
     <ClInclude Include="components\Image.h" />
     <ClInclude Include="components\interactableElement.h" />
     <ClInclude Include="components\interactions.h" />
@@ -170,6 +171,7 @@
     <ClCompile Include="components\enemy_detection_component.cpp" />
     <ClCompile Include="classes\weapon_behaviour.cpp" />
     <ClCompile Include="components\hunger_component.cpp" />
+    <ClCompile Include="components\hypothermia_component.cpp" />
     <ClCompile Include="components\interactableElement.cpp" />
     <ClCompile Include="components\interactions.cpp" />
     <ClCompile Include="components\intoxication_component.cpp" />
