--- a/DOME.vcxproj.filters
+++ b/DOME.vcxproj.filters
@@ -287,6 +287,7 @@
     <ClCompile Include="components\bleedout_component.cpp">
       <Filter>Source Files\components</Filter>
     </ClCompile>
+    <ClCompile Include="components\hypothermia_component.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils\Collisions.h">
@@ -640,6 +641,7 @@
     <ClInclude Include="components\bleedout_component.h">
       <Filter>Header Files\components</Filter>
     </ClInclude>
+    <ClInclude Include="components\hypothermia_component.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Header Files">
