--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -45,6 +45,7 @@
     <ClInclude Include="components\charge.h" />
     <ClInclude Include="components\box_collider.h" />
     <ClInclude Include="components\concussion_component.h" />
+    <ClInclude Include="components\enemy_animation.h" />
     <ClInclude Include="components\enemy_attack_component.h" />
     <ClInclude Include="components\enemy_behaviour_component.h" />
     <ClInclude Include="components\enemy_component.h" />
@@ -162,6 +163,7 @@
     <ClCompile Include="components\box_collider.cpp" />
     <ClCompile Include="components\charge.cpp" />
     <ClCompile Include="components\concussion_component.cpp" />
+    <ClCompile Include="components\enemy_animation.cpp" />
     <ClCompile Include="components\enemy_attack_component.cpp" />
     <ClCompile Include="components\enemy_behaviour_component.cpp" />
     <ClCompile Include="components\enemy_component.cpp" />
