--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -29,6 +29,7 @@
     <ClInclude Include="classes\game_object.h" />
     <ClInclude Include="classes\game_scene.h" />
     <ClInclude Include="classes\game_state_machine.h" />
+    <ClInclude Include="classes\hud.h" />
     <ClInclude Include="classes\Item.h" />
     <ClInclude Include="classes\tile.h" />
     <ClInclude Include="classes\menu_button.h" />
@@ -146,6 +147,7 @@
     <ClCompile Include="classes\game_object.cpp" />
     <ClCompile Include="classes\game_scene.cpp" />
     <ClCompile Include="classes\game_state_machine.cpp" />
+    <ClCompile Include="classes\hud.cpp" />
     <ClCompile Include="classes\Item.cpp" />
     <ClCompile Include="classes\tile.cpp" />
     <ClCompile Include="classes\menu_button.cpp" />
