--- a/DOME.vcxproj.filters
+++ b/DOME.vcxproj.filters
@@ -281,6 +281,10 @@
     <ClCompile Include="classes\hud.cpp">
       <Filter>Source Files\classes</Filter>
     </ClCompile>
+    <ClCompile Include="components\enemy_animation.cpp" />
+    <ClCompile Include="components\classic_bullet.cpp">
+      <Filter>Source Files\components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils\Collisions.h">
@@ -630,6 +634,10 @@
     </ClInclude>
     <ClInclude Include="classes\hud.h">
       <Filter>Header Files\classes</Filter>
+    </ClInclude>
+    <ClInclude Include="components\enemy_animation.h" />
+    <ClInclude Include="components\classic_bullet.h">
+      <Filter>Header Files\components</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
