--- a/DOME.vcxproj.filters
+++ b/DOME.vcxproj.filters
@@ -281,9 +281,14 @@
     <ClCompile Include="classes\hud.cpp">
       <Filter>Source Files\classes</Filter>
     </ClCompile>
-    <ClCompile Include="components\enemy_animation.cpp" />
     <ClCompile Include="components\classic_bullet.cpp">
       <Filter>Source Files\components</Filter>
+    </ClCompile>
+    <ClCompile Include="components\enemy_animation.cpp">
+      <Filter>Source Files\components</Filter>
+    </ClCompile>
+    <ClCompile Include="classes\locations_scene.cpp">
+      <Filter>Source Files\classes</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -635,9 +640,14 @@
     <ClInclude Include="classes\hud.h">
       <Filter>Header Files\classes</Filter>
     </ClInclude>
-    <ClInclude Include="components\enemy_animation.h" />
     <ClInclude Include="components\classic_bullet.h">
       <Filter>Header Files\components</Filter>
+    </ClInclude>
+    <ClInclude Include="components\enemy_animation.h">
+      <Filter>Header Files\components</Filter>
+    </ClInclude>
+    <ClInclude Include="classes\locations_scene.h">
+      <Filter>Header Files\classes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
