--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -31,6 +31,7 @@
     <ClInclude Include="classes\game_state_machine.h" />
     <ClInclude Include="classes\hud.h" />
     <ClInclude Include="classes\Item.h" />
+    <ClInclude Include="classes\locations_scene.h" />
     <ClInclude Include="classes\tile.h" />
     <ClInclude Include="classes\menu_button.h" />
     <ClInclude Include="classes\menu_scene.h" />
@@ -151,6 +152,7 @@
     <ClCompile Include="classes\game_state_machine.cpp" />
     <ClCompile Include="classes\hud.cpp" />
     <ClCompile Include="classes\Item.cpp" />
+    <ClCompile Include="classes\locations_scene.cpp" />
     <ClCompile Include="classes\tile.cpp" />
     <ClCompile Include="classes\menu_button.cpp" />
     <ClCompile Include="classes\menu_scene.cpp" />
