--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -43,6 +43,7 @@
     <ClInclude Include="classes\shelter_scene.h" />
     <ClInclude Include="classes\workshop.h" />
     <ClInclude Include="components\animation_component.h" />
+    <ClInclude Include="components\back_to_shelter.h" />
     <ClInclude Include="components\bleedout_component.h" />
     <ClInclude Include="components\charge.h" />
     <ClInclude Include="components\box_collider.h" />
@@ -164,6 +165,7 @@
     <ClCompile Include="classes\shelter_scene.cpp" />
     <ClCompile Include="classes\workshop.cpp" />
     <ClCompile Include="components\animation_component.cpp" />
+    <ClCompile Include="components\back_to_shelter.cpp" />
     <ClCompile Include="components\bleedout_component.cpp" />
     <ClCompile Include="components\box_collider.cpp" />
     <ClCompile Include="components\charge.cpp" />
