new station files created

--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -32,6 +32,9 @@
     <ClInclude Include="classes\hud.h" />
     <ClInclude Include="classes\Item.h" />
     <ClInclude Include="classes\locations_scene.h" />
+    <ClInclude Include="classes\navigation_station.h" />
+    <ClInclude Include="classes\ship_station.h" />
+    <ClInclude Include="classes\sleep_station.h" />
     <ClInclude Include="classes\tile.h" />
     <ClInclude Include="classes\menu_button.h" />
     <ClInclude Include="classes\menu_scene.h" />
@@ -154,6 +157,9 @@
     <ClCompile Include="classes\hud.cpp" />
     <ClCompile Include="classes\Item.cpp" />
     <ClCompile Include="classes\locations_scene.cpp" />
+    <ClCompile Include="classes\navigation_station.cpp" />
+    <ClCompile Include="classes\ship_station.cpp" />
+    <ClCompile Include="classes\sleep_station.cpp" />
     <ClCompile Include="classes\tile.cpp" />
     <ClCompile Include="classes\menu_button.cpp" />
     <ClCompile Include="classes\menu_scene.cpp" />
