--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -32,6 +32,7 @@
     <ClInclude Include="classes\hud.h" />
     <ClInclude Include="classes\Item.h" />
     <ClInclude Include="classes\locations_scene.h" />
+    <ClInclude Include="classes\location_button.h" />
     <ClInclude Include="classes\navigation_station.h" />
     <ClInclude Include="classes\ship_station.h" />
     <ClInclude Include="classes\sleep_station.h" />
@@ -157,6 +158,7 @@
     <ClCompile Include="classes\hud.cpp" />
     <ClCompile Include="classes\Item.cpp" />
     <ClCompile Include="classes\locations_scene.cpp" />
+    <ClCompile Include="classes\location_button.cpp" />
     <ClCompile Include="classes\navigation_station.cpp" />
     <ClCompile Include="classes\ship_station.cpp" />
     <ClCompile Include="classes\sleep_station.cpp" />
