contact_dmg_grp renamed to enemy_grp

--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -73,6 +73,7 @@
     <ClInclude Include="components\particleSystem.h" />
     <ClInclude Include="components\player_collisions.h" />
     <ClInclude Include="components\enemy_contact_damege.h" />
+    <ClInclude Include="components\player_damage.h" />
     <ClInclude Include="components\player_health_component.h" />
     <ClInclude Include="components\rigid_body.h" />
     <ClInclude Include="components\tile_renderer.h" />
@@ -198,6 +199,7 @@
     <ClCompile Include="components\particleSystem.cpp" />
     <ClCompile Include="components\player_collisions.cpp" />
     <ClCompile Include="components\enemy_contact_damege.cpp" />
+    <ClCompile Include="components\player_damage.cpp" />
     <ClCompile Include="components\player_health_component.cpp" />
     <ClCompile Include="components\rigid_body.cpp" />
     <ClCompile Include="components\tile_renderer.cpp" />
