cover_component class created

--- a/DOME.vcxproj.filters
+++ b/DOME.vcxproj.filters
@@ -308,6 +308,10 @@
     <ClCompile Include="components\CameraMovement.cpp">
       <Filter>Source Files\components</Filter>
     </ClCompile>
+    <ClCompile Include="classes\cover.cpp">
+      <Filter>Source Files\classes</Filter>
+    </ClCompile>
+    <ClCompile Include="cover_component.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils\Collisions.h">
@@ -688,6 +692,10 @@
     <ClInclude Include="components\CameraMovement.h">
       <Filter>Header Files\components</Filter>
     </ClInclude>
+    <ClInclude Include="classes\cover.h">
+      <Filter>Header Files\classes</Filter>
+    </ClInclude>
+    <ClInclude Include="cover_component.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Header Files">
