--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -22,6 +22,7 @@
     <ClInclude Include="classes\camera.h" />
     <ClInclude Include="classes\charge_weapon.h" />
     <ClInclude Include="classes\countdown.h" />
+    <ClInclude Include="classes\cover.h" />
     <ClInclude Include="classes\crafting_system.h" />
     <ClInclude Include="classes\enemy.h" />
     <ClInclude Include="classes\game_character.h" />
@@ -82,6 +83,7 @@
     <ClInclude Include="components\tiredness_component.h" />
     <ClInclude Include="components\Transform.h" />
     <ClInclude Include="components\weapon.h" />
+    <ClInclude Include="cover_component.h" />
     <ClInclude Include="ecs\Component.h" />
     <ClInclude Include="ecs\ecs.h" />
     <ClInclude Include="ecs\Entity.h" />
@@ -150,6 +152,7 @@
     <ClCompile Include="classes\camera.cpp" />
     <ClCompile Include="classes\charge_weapon.cpp" />
     <ClCompile Include="classes\countdown.cpp" />
+    <ClCompile Include="classes\cover.cpp" />
     <ClCompile Include="classes\crafting_system.cpp" />
     <ClCompile Include="classes\enemy.cpp" />
     <ClCompile Include="classes\game_character.cpp" />
@@ -209,6 +212,7 @@
     <ClCompile Include="components\tiredness_component.cpp" />
     <ClCompile Include="components\Transform.cpp" />
     <ClCompile Include="components\weapon.cpp" />
+    <ClCompile Include="cover_component.cpp" />
     <ClCompile Include="ecs\Manager.cpp" />
     <ClCompile Include="game\Game.cpp" />
     <ClCompile Include="json\JSON.cpp" />
