--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -78,6 +78,7 @@
     <ClInclude Include="components\player_damage.h" />
     <ClInclude Include="components\player_health_component.h" />
     <ClInclude Include="components\rigid_body.h" />
+    <ClInclude Include="components\TextWithBackGround.h" />
     <ClInclude Include="components\tile_renderer.h" />
     <ClInclude Include="components\player_animation.h" />
     <ClInclude Include="components\ricochet.h" />
@@ -207,6 +208,7 @@
     <ClCompile Include="components\player_damage.cpp" />
     <ClCompile Include="components\player_health_component.cpp" />
     <ClCompile Include="components\rigid_body.cpp" />
+    <ClCompile Include="components\TextWithBackGround.cpp" />
     <ClCompile Include="components\tile_renderer.cpp" />
     <ClCompile Include="components\player_animation.cpp" />
     <ClCompile Include="components\ricochet.cpp" />
