--- a/DOME.vcxproj.filters
+++ b/DOME.vcxproj.filters
@@ -314,7 +314,9 @@
     <ClCompile Include="components\cover_component.cpp">
       <Filter>Source Files\components</Filter>
     </ClCompile>
-    <ClCompile Include="components\TextWithBackGround.cpp" />
+    <ClCompile Include="components\TextWithBackGround.cpp">
+      <Filter>Source Files\components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils\Collisions.h">
@@ -701,7 +703,9 @@
     <ClInclude Include="components\cover_component.h">
       <Filter>Header Files\components</Filter>
     </ClInclude>
-    <ClInclude Include="components\TextWithBackGround.h" />
+    <ClInclude Include="components\TextWithBackGround.h">
+      <Filter>Header Files\components</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Header Files">
