starting pause scene

--- a/DOME.vcxproj.filters
+++ b/DOME.vcxproj.filters
@@ -317,7 +317,7 @@
     <ClCompile Include="components\TextWithBackGround.cpp">
       <Filter>Source Files\components</Filter>
     </ClCompile>
-    <ClCompile Include="components\pause_scene.cpp">
+    <ClCompile Include="classes\pause_scene.cpp">
       <Filter>Source Files\classes</Filter>
     </ClCompile>
   </ItemGroup>
@@ -709,7 +709,7 @@
     <ClInclude Include="components\TextWithBackGround.h">
       <Filter>Header Files\components</Filter>
     </ClInclude>
-    <ClInclude Include="components\pause_scene.h">
+    <ClInclude Include="classes\pause_scene.h">
       <Filter>Header Files\classes</Filter>
     </ClInclude>
   </ItemGroup>
