--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -34,6 +34,7 @@
     <ClInclude Include="classes\Item.h" />
     <ClInclude Include="classes\locations_scene.h" />
     <ClInclude Include="classes\navigation_station.h" />
+    <ClInclude Include="classes\pause_scene.h" />
     <ClInclude Include="classes\ship_station.h" />
     <ClInclude Include="classes\sleep_station.h" />
     <ClInclude Include="classes\tile.h" />
@@ -73,7 +74,6 @@
     <ClInclude Include="components\loot.h" />
     <ClInclude Include="components\pain_component.h" />
     <ClInclude Include="components\particleSystem.h" />
-    <ClInclude Include="components\pause_scene.h" />
     <ClInclude Include="components\player_collisions.h" />
     <ClInclude Include="components\enemy_contact_damege.h" />
     <ClInclude Include="components\player_damage.h" />
@@ -166,6 +166,7 @@
     <ClCompile Include="classes\Item.cpp" />
     <ClCompile Include="classes\locations_scene.cpp" />
     <ClCompile Include="classes\navigation_station.cpp" />
+    <ClCompile Include="classes\pause_scene.cpp" />
     <ClCompile Include="classes\ship_station.cpp" />
     <ClCompile Include="classes\sleep_station.cpp" />
     <ClCompile Include="classes\tile.cpp" />
@@ -204,7 +205,6 @@
     <ClCompile Include="components\loot.cpp" />
     <ClCompile Include="components\pain_component.cpp" />
     <ClCompile Include="components\particleSystem.cpp" />
-    <ClCompile Include="components\pause_scene.cpp" />
     <ClCompile Include="components\player_collisions.cpp" />
     <ClCompile Include="components\enemy_contact_damege.cpp" />
     <ClCompile Include="components\player_damage.cpp" />
