fixed render of menus in shelter scene

--- a/DOME.vcxproj.filters
+++ b/DOME.vcxproj.filters
@@ -320,6 +320,9 @@
     <ClCompile Include="classes\inventoryDropdown.cpp">
       <Filter>Source Files\classes</Filter>
     </ClCompile>
+    <ClCompile Include="components\open_station.cpp">
+      <Filter>Source Files\components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils\Collisions.h">
@@ -711,6 +714,9 @@
     </ClInclude>
     <ClInclude Include="classes\inventoryDropdown.h">
       <Filter>Header Files\classes</Filter>
+    </ClInclude>
+    <ClInclude Include="components\open_station.h">
+      <Filter>Header Files\components</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
