--- a/DOME.vcxproj.filters
+++ b/DOME.vcxproj.filters
@@ -320,6 +320,7 @@
     <ClCompile Include="components\open_station.cpp">
       <Filter>Source Files\components</Filter>
     </ClCompile>
+    <ClCompile Include="components\TransitionComponent.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils\Collisions.h">
@@ -712,6 +713,7 @@
     <ClInclude Include="components\open_station.h">
       <Filter>Header Files\components</Filter>
     </ClInclude>
+    <ClInclude Include="components\TransitionComponent.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Header Files">
