--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -85,6 +85,7 @@
     <ClInclude Include="components\ricochet.h" />
     <ClInclude Include="components\tiredness_component.h" />
     <ClInclude Include="components\Transform.h" />
+    <ClInclude Include="components\TransitionComponent.h" />
     <ClInclude Include="components\weapon.h" />
     <ClInclude Include="ecs\Component.h" />
     <ClInclude Include="ecs\ecs.h" />
@@ -216,6 +217,7 @@
     <ClCompile Include="components\ricochet.cpp" />
     <ClCompile Include="components\tiredness_component.cpp" />
     <ClCompile Include="components\Transform.cpp" />
+    <ClCompile Include="components\TransitionComponent.cpp" />
     <ClCompile Include="components\weapon.cpp" />
     <ClCompile Include="ecs\Manager.cpp" />
     <ClCompile Include="game\Game.cpp" />
